--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -672,6 +672,7 @@ allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.87.118;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -822,7 +823,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
-allow 2001:8003:3c15:1500:ab25:c6e8:f4f4:2a47;
 allow 2001:910:1400:107::2;
 allow 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 allow 2001:ac8:22:43::20e5:a7d7;
@@ -832,7 +832,6 @@ allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.182.99.129;
-allow 203.51.38.33;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -936,10 +935,12 @@ allow 204.8.96.86;
 allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
+allow 205.185.113.180;
 allow 205.185.113.8;
 allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
+allow 205.185.118.31;
 allow 205.185.119.35;
 allow 205.185.121.170;
 allow 205.185.121.177;
@@ -976,7 +977,6 @@ allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -1059,7 +1059,6 @@ allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fef9:100:1100::199;
@@ -1079,6 +1078,8 @@ allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
+allow 2605:6400:20:482:3920:1829:1839:1293;
+allow 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:c26:5163:253e:1ef6:d887;
 allow 2605:6400:20:c26:5163:253e:1ef6:d896;
@@ -1341,6 +1342,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1658,9 +1660,11 @@ allow 2a0f:e586:f:f:a060:ebda:49aa:b011;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
+allow 2a10:1fc0:10::ce18:9bf9;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:233;
@@ -1856,6 +1860,7 @@ allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1937,6 +1942,7 @@ allow 84.239.46.144;
 allow 84.247.183.128;
 allow 84.252.120.131;
 allow 85.239.41.130;
+allow 85.239.55.172;
 allow 85.93.218.204;
 allow 86.107.101.115;
 allow 86.54.28.49;
