--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -672,6 +672,7 @@ set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.87.118;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -822,7 +823,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
-set_real_ip_from 2001:8003:3c15:1500:ab25:c6e8:f4f4:2a47;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
@@ -832,7 +832,6 @@ set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.182.99.129;
-set_real_ip_from 203.51.38.33;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
@@ -936,10 +935,12 @@ set_real_ip_from 204.8.96.86;
 set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
+set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
+set_real_ip_from 205.185.118.31;
 set_real_ip_from 205.185.119.35;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.121.177;
@@ -976,7 +977,6 @@ set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
-set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
@@ -1059,7 +1059,6 @@ set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -1079,6 +1078,8 @@ set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
+set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
+set_real_ip_from 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d896;
@@ -1341,6 +1342,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1658,9 +1660,11 @@ set_real_ip_from 2a0f:e586:f:f:a060:ebda:49aa:b011;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
+set_real_ip_from 2a10:1fc0:10::ce18:9bf9;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:233;
@@ -1856,6 +1860,7 @@ set_real_ip_from 51.89.136.168;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1937,6 +1942,7 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.183.128;
 set_real_ip_from 84.252.120.131;
 set_real_ip_from 85.239.41.130;
+set_real_ip_from 85.239.55.172;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.107.101.115;
 set_real_ip_from 86.54.28.49;
