--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,7 +134,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
-allow 13.201.187.55;
+allow 13.126.29.181;
 allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -181,6 +181,7 @@ allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -695,7 +696,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.151;
+allow 198.167.206.177;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -708,6 +709,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
@@ -958,7 +960,6 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -1061,6 +1062,7 @@ allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:4300:a:224:216:3cff:fe31:d55f;
@@ -1070,6 +1072,7 @@ allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1138,7 +1141,6 @@ allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
-allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:1d1::100;
@@ -1583,7 +1585,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1609,14 +1610,7 @@ allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
 allow 2a0f:85c1:356:5bdd::beef;
-allow 2a0f:ca80:1337::47f8:fb5;
-allow 2a0f:ca80:1337::5071:cafb;
-allow 2a0f:ca80:1337::64fa:7d6b;
-allow 2a0f:ca80:1337::6d9e:fb47;
-allow 2a0f:ca80:1337::72f7:ed26;
-allow 2a0f:ca80:1337::7da1:75ca;
 allow 2a0f:ca80:1337::9bb3:5385;
-allow 2a0f:ca80:1337::a87a:2f7d;
 allow 2a0f:ca80:1337::b5a4:a762;
 allow 2a0f:ca80:1337::cd4a:eb83;
 allow 2a0f:df00:0:255::194;
@@ -1764,7 +1758,6 @@ allow 45.148.10.169;
 allow 45.157.11.6;
 allow 45.61.185.172;
 allow 45.61.186.203;
-allow 45.61.187.200;
 allow 45.61.188.15;
 allow 45.66.35.10;
 allow 45.66.35.20;
@@ -1805,15 +1798,8 @@ allow 46.30.188.218;
 allow 46.38.243.210;
 allow 47.254.142.180;
 allow 47.89.193.230;
-allow 50.118.225.222;
-allow 50.118.225.225;
-allow 50.118.225.226;
 allow 50.118.225.227;
-allow 50.118.225.228;
 allow 50.118.225.229;
-allow 50.118.225.230;
-allow 50.118.225.232;
-allow 50.118.225.233;
 allow 50.118.225.237;
 allow 5.104.86.6;
 allow 51.15.59.15;
@@ -1906,6 +1892,7 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
+allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
@@ -1952,7 +1939,6 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.138.145;
-allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.148.86.47;
